Profesyonel tasarim eklendi

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html><head><title>Gökbörü Launcher</title><style>body{background:#000;color:#00f;text-align:center;font-family:sans-serif;padding-top:100px;}h1{font-size:50px;}</style></head><body><h1>GÖKBÖRÜ LAUNCHER</h1><p>Sistem Aktif!</p></body></html>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gökbörü Launcher | Resmi Sayfa</title>
+    <style>
+        body { background: #0a0a0a; color: #e0e0e0; font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; text-align: center; margin: 0; padding: 0; }
+        .container { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a2e 0%, #0a0a0a 100%); }
+        h1 { color: #00d4ff; font-size: 3rem; text-transform: uppercase; letter-spacing: 5px; margin-bottom: 10px; text-shadow: 0 0 20px #00d4ff; }
+        p { font-size: 1.2rem; color: #888; margin-bottom: 30px; }
+        .download-btn { background: #00d4ff; color: #0a0a0a; padding: 15px 40px; font-size: 1.5rem; font-weight: bold; text-decoration: none; border-radius: 50px; transition: 0.3s; box-shadow: 0 0 15px rgba(0, 212, 255, 0.5); }
+        .download-btn:hover { background: #fff; transform: scale(1.1); box-shadow: 0 0 30px #00d4ff; }
+        .footer { position: absolute; bottom: 20px; font-size: 0.8rem; color: #444; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>GÖKBÖRÜ</h1>
+        <p>Yeni Nesil Launcher Deneyimi Çok Yakında</p>
+        <a href="#" class="download-btn">DOSYAYI İNDİR</a>
+        <div class="footer">© 2026 Gökbörü Team - Tüm Hakları Saklıdır.</div>
+    </div>
+</body>
+</html>
